# ollama-gradio

./: README.md  app.py  composition.py  custom_app.py  pyproject.toml  requirements.txt
ollama_gradio/: __init__.py
